assets/css/header.css
@import url('./variables.css');

.top-header{
    background-color: var(--dark-purple);
    height: 30px;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    padding: 0 10rem;

}

.top-header p {
    color: var(--white);
    margin: 0 10px;
    font-weight: 300;
    font-family: var(--fonte-titulo);
}

.bottom-header {
    background: rgb(42,14,60);
    background: linear-gradient(90deg, rgba(42,14,60,1) 0%, rgb(56, 16, 117) 48%, rgba(42,14,60,1) 100%);
    height:60px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding:0 10rem;
}


.bottom-header nav .nav-list {
    list-style-type: none;
    display: flex;
    margin-bottom: 0;
    flex-wrap: nowrap;  /* Impede que os itens quebrem para a próxima linha */

}

.bottom-header nav .nav-list li a {
    display: block;
    text-decoration: none;
    color: var(--white);
    font-size: 18px;
    font-family: var(--fonte-titulo);
    font-weight: bold;
    margin: 0 5px;
    padding: 10px;
    transition: all .5s;
}

.bottom-header nav .nav-list li a:hover{
    scale: 1.1;
    background-image: linear-gradient(90deg, rgb(145, 64, 198) 0%, rgb(215, 62, 75) 100%); 
    -webkit-background-clip: text; 
    color: transparent; 
}

.bottom-header nav .nav-list .drop-hover{
    position: relative;
    z-index: 1;
}

.bottom-header nav .nav-list .drop-hover:hover .dropping-down{
    height: 320px;
    width: 180px;
    padding: 5px 10px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.bottom-header nav .nav-list .drop-hover .dropping-down {
    position: absolute;
    top: 60px;
    background-color: var(--dark-purple);
    width: 100%;
    height: 0;
    overflow: hidden;
    transition: all .2s;
    z-index: 1;
}


.bottom-header nav .nav-list .drop-hover .dropping-down a{
    width: 100%;
    font-size: 17px;
}

@media (max-width:999px) {

    .bottom-header nav .nav-list{
        position: fixed;
    }

    .top-header{
        padding: 0 1rem;
    
    }
    
    .top-header p {
        color: white;
        margin: 0 10px;
        font-weight: 300;
    }
    .bottom-header {
        padding:0 2rem;
    }
    
}

